--- a/modules/websocketapi/pom.xml
+++ b/modules/websocketapi/pom.xml
@@ -20,6 +20,7 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- RestTemplate 相关-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -29,6 +30,11 @@
                     <artifactId>spring-boot-starter-tomcat</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- RestTemplate 相关-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
         </dependency>
 
         <dependency>
