--- a/modules/myhisapp/pom.xml
+++ b/modules/myhisapp/pom.xml
@@ -19,6 +19,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- RestTemplate 相关-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
 
         <!--spring transaction依赖的组件 -->
         <dependency>
