--- a/modules/loginapi/pom.xml
+++ b/modules/loginapi/pom.xml
@@ -7,24 +7,17 @@
     <groupId>allhis</groupId>
     <artifactId>ah_loginapi</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.5.RELEASE</version>
+        <version>1.5.2.RELEASE</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- RestTemplate 相关-->
@@ -48,12 +41,12 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>tomcat-servlet-api</artifactId>
-            <version>7.0.57</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.tomcat</groupId>-->
+            <!--<artifactId>tomcat-servlet-api</artifactId>-->
+            <!--<version>7.0.57</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
         <!--用于密码加密-->
         <!--<dependency>-->
@@ -81,12 +74,6 @@
         </dependency>
 
     </dependencies>
-
-
-    <properties>
-        <start-class>allcom.InitWeb</start-class>
-        <java.version>1.8</java.version>
-    </properties>
 
     <build>
         <plugins>
